--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,4 +1,4 @@
-Start -> _ | B Start X | X Start B | A Start C | C Start A | C Start Y | Y Start C
+Start -> _ | B Start X | X Start B | A Start C | C Start A | C Start Y | Y Start C | Y C Start C Y
 B -> 1 A | A 1 | A
 A -> 01 | 10
 C -> 11
