--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,6 +1,4 @@
-Start -> _ | B Start X | X Start B | A Start C | C Start A | C Start Y | Y Start C | Y C Start C Y | Y Start 111 | 111 Start Y
-B -> 1 A | A 1 | A
-A -> 01 | 10
-C -> 11
-X -> 1
-Y -> 0
+Start -> A Start | 1 Start C | _
+A -> 0 B B | 0 B B 1
+B -> 11
+C -> 1 C 0 | 0 C 1 | 0 1 C 1 | 1 0 C 1 | 1 1 C 0 | _
