--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,4 +1,4 @@
-Start -> A Start | 1 Start C | _
-A -> 0 B B | 0 B B 1
-B -> 11
+Start -> 0 A | 1 Start C | Start Start | _
+A -> Start B B | B Start B | B B Start | Start B B B | B Start B B | B B Start B | B B B Start
+B -> 1
 C -> 1 C 0 | 0 C 1 | 0 1 C 1 | 1 0 C 1 | 1 1 C 0 | _
