--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,4 +1,4 @@
-Start -> 0 A | 1 Start C | Start Start | _
+Start -> 0 A | 1 C | Start Start | _
 A -> Start B B | B Start B | B B Start | Start B B B | B Start B B | B B Start B | B B B Start
 B -> 1
-C -> 1 C 0 | 0 C 1 | 0 1 C 1 | 1 0 C 1 | 1 1 C 0 | _
+C -> 1 Start 0 | 0 Start 1 | 0 1 Start 1 | 1 0 Start 1 | 1 1 Start 0 | _
