--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,6 +1,4 @@
-Start -> 0 A | 1 C | Start Start | 1 D 1 | 1 D 11 | 11 D 1 | 111 E | E 111 | _
-A -> Start B B | B Start B | B B Start | Start B B B | B Start B B | B B Start B | B B B Start
-B -> 1
-C -> 1 Start 0 | 0 Start 1 | 0 1 Start 1 | 1 0 Start 1 | 1 1 Start 0 | 0 1 Start | 1 0 Start | Start 0 1 | Start 1 0 | 0 Start 1 1
-D -> Start 0 | 0 Start
-E -> 0 Start | Start 0 | 0
+Start -> _ | 1 Start | 0 A | 0 B
+A -> 1 Start | 1 A Start | 1 B Start
+B -> 1 A Start | 1 B Start | 1 C Start
+C -> 1 B Start | 1 C Start
