--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,4 +1,5 @@
-Start -> _ | 1 Start | 0 A | 0 B
-A -> 1 Start | 1 A Start | 1 B Start
-B -> 1 A Start | 1 B Start | 1 C Start
-C -> 1 B Start | 1 C Start
+Start -> 1 Start | 0 Z
+Z -> 0 B Z | 0 C Z | 1 Z | _
+A -> 1 Z
+B -> 1 A | 1 B
+C -> 1 B | 0 C
