--- a/cfg7.cfg
+++ b/cfg7.cfg
@@ -1,6 +1,6 @@
 Start -> 1 A | 0 B | A 1 | B 0 | Start Start | _
 A -> 1 C | C 1
-B -> 11 S | 1 S 1 | S 11
+B -> 11 Start | 1 Start 1 | Start 11
 C -> 0 D | D 0 | 1 E | E 1
 D -> Start | Start 1 | 1 Start | Start 1 Start
 E -> Start 0 Start | 0 Start | 0 Start
