--- a/cfg8.cfg
+++ b/cfg8.cfg
@@ -1,5 +1,3 @@
-Start -> A | B
+Start -> A | B | _
 A -> 0 A 0 | 0 A 1 | 1 A 0 | 1 A 1 | 0 | 1
-B -> 0 Y 1 Z | 1 Y 0 Z
-Y -> 0 Y 0 | 1 Y 1 | _
-Z -> 0 0 Z | 0 1 Z | 1 0 Z | 1 1 Z | _
+B -> 0 S 1 S | 1 S 0 S
