--- a/cfg8.cfg
+++ b/cfg8.cfg
@@ -1,4 +1,6 @@
-Start -> A | B | _
-A -> 0 A 0 | 0 A 1 | 1 A 0 | 1 A 1 | 0 | 1
-B -> 0 S 1 S | 1 S 0 S | S 0 S 1 | S 1 S 0 | 0 C 1 C | 1 C 0 C | C 0 C 1 | C 1 C 0
-C -> 0 C 0 | 1 C 1 | _
+Start -> A B | 1 C 0 | 0 C 1 | 0 X 0 | 1 Y 1
+C -> 1 C 0 | 0 C 1 | _
+B -> _ | 1 1 B | 1 0 B | 0 1 B | 0 0 B
+A -> 0 | 1
+X -> 1 Y 1 | 0 X 0 | 11
+Y -> 0 X 0 | 1 Y 1 | 00
