--- a/cfg8.cfg
+++ b/cfg8.cfg
@@ -1,6 +1,3 @@
-Start -> A B | 1 C 0 | 0 C 1 | 0 X 0 | 1 Y 1
-C -> 1 C 0 | 0 C 1 | _
-B -> _ | 1 1 B | 1 0 B | 0 1 B | 0 0 B
-A -> 0 | 1
-X -> 1 Y 1 | 0 X 0 | 11
-Y -> 0 X 0 | 1 Y 1 | 00
+Start -> X | Y | X Y | Y X
+X -> 0 X 0 | 0 X 1 | 1 X 0 | 1 X 1 | 0
+Y -> 0 Y 0 | 1 Y 1 | 0 Y 1 | 1 Y 0 | 1
